examples/core/src/main/java/org/jbehave/examples/core/stories/failing/traders_can_be_searched.story

Scenario: Traders search fails

Given the trader ranks: 
|name |rank    |
|Larry|Stooge 3|
|Moe  |Stooge 1|
|Curly|Stooge 2|
!-- Verification fails
Then the traders returned are:
|name |rank    |
|Moe  |Stooge 1|
|Curly|Stooge 2|

